adding handling for mac hidden titlebar; more splash page ui work

--- a/browser/screens/splash/index.html
+++ b/browser/screens/splash/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>git-client</title>
+  <title>GitIt</title>
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
   <script>
     const { ipcRenderer } = require('electron')
 
+    document.body.classList.add(`platform-${process.platform}`)
     ipcRenderer.send('fetch-repos')
     ipcRenderer.on('receive-repos', (event, repos) => {
       document.querySelector('.splash-page .repos').innerHTML = repos.map(repo => {
