--- a/browser/screens/webpack-template.html
+++ b/browser/screens/webpack-template.html
@@ -1,3 +1,4 @@
+<!-- HTMLPlugin uses this as template for injecting script tag for each screen's build -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
