--- a/browser/screens/webpack-template.html
+++ b/browser/screens/webpack-template.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   <div id="root"></div>
+  <script>
+    // add platform class to body
+    document.body.classList.add(`platform-${process.platform}`)
+  </script>
 </body>
 </html>
